--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ footer a {
   .text-right {
     text-align: right;
   }
-  
+
   .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -195,3 +195,27 @@ footer a {
     font-size: 17px;
     line-height: 1.3;
   }
+ 
+.contact {
+    text-align: center;
+    background: #024e76;
+  }
+ .contact h2 {
+     color: #fce138;
+ } 
+ .contact-info iframe {
+    width: 400px;
+    height: 400px;
+  }
+
+.location {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+  }  
+ .location h3 {
+     color: #fce138;
+ } 
