add flexbox to the intro section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,9 +123,6 @@ footer a {
     padding: 10px 20px;
     font-size: 16px;  
 }  
-.intro {
-    text-align: center;
-}
 
 .intro p {
     line-height: 1.7;
@@ -133,9 +130,9 @@ footer a {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
   }
 .steps { 
-    text-align: center;
     background: #fce138;
   }
 
@@ -143,10 +140,11 @@ footer a {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
   }
 .primary-border {
     border-color: #fce138;
@@ -175,9 +173,7 @@ footer a {
 .steps span {
     font-size: 38px;
 }  
-.trainers {
-   text-align: center;
-}
+
 .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
@@ -203,6 +199,10 @@ footer a {
     text-align: right;
   }
 
+.flex-row {
+  display: flex;
+}
+
   .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -221,7 +221,6 @@ footer a {
  
 .contact {
     background: #024e76;
-    text-align: center;
   }
  .contact h2 {
      color: #fce138;
@@ -255,3 +254,4 @@ footer a {
   .contact-info a {
     color: #fce138;
   }
+
