--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,70 +153,93 @@ footer a {
     border-color: #39a6b2;
   } 
 
-
-.steps div {
-    margin-bottom: 80px;
+  .step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
   }
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-  } 
-.steps h3 {
+
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;  
   }
-.steps p {
-    color: #39a6b2;
-    font-size: 23px;
-  }
-.steps span {
-    font-size: 38px;
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }  
-
-.trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
-    background: #024e76;
-    color: #fce138;
-    overflow: auto;
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
+.step-img img {
+  max-width: 100%;
+}
+.step-text {
+  flex: 12;
+}
+.step-text p {
+    color: #39a6b2;
+    font-size: 18px;
   }
+
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+  } 
+
+
   .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
   }
   
   .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
-  }
-  .text-left {
-    text-align: left;
-  }
-  
-  .text-right {
-    text-align: right;
+    padding: 25px;
+   
   }
 
 .flex-row {
   display: flex;
 }
 
+.trainers {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+.trainer {
+  margin: 20px;
+  background: #024e76;
+  color: #fce138;
+  flex: 1;
+}
+.trainer-bio {
+  line-height: 1.3;
+}
   .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
-  }
+    font-size: 28px;
+    }
   
   .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
   }
   
   .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
   }
  
 .contact {
