--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,10 +197,7 @@ footer a {
   } 
 
 
-  .trainer img {
-    width: 100%;
-  }
-  
+
   .trainer-bio {
     padding: 25px;
    
@@ -225,6 +222,11 @@ footer a {
   color: #fce138;
   flex: 1;
 }
+
+.trainer img {
+  width: 100%;
+}
+
 .trainer-bio {
   line-height: 1.3;
 }
@@ -249,20 +251,26 @@ footer a {
      color: #fce138;
      
  }
+
+ .contact-info {
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+ }
  
+ .contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
+
  .contact-info iframe {
-    width: 400px;
-    height: 400px;
+     height: 400px;
     
 }
 .contact-info div  {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 200px;
     color: white;
      }  
+ 
  .contact-info h3 {
      color: #fce138;
      font-size: 32px;
@@ -270,7 +278,7 @@ footer a {
  .contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
   }
   
@@ -278,3 +286,22 @@ footer a {
     color: #fce138;
   }
 
+.contact-form input, .contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+.contact-form button  {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+}
