--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,20 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg"); 
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
   }    
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     
   }
 header a {
@@ -41,8 +49,16 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   } 
-footer {
+  header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
+
+  footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
@@ -75,6 +91,8 @@ footer a {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 .hero-cta {
         width: 35%;
@@ -88,15 +106,18 @@ footer a {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, 0.8);
     color: #024e76;
     padding: 20px;
     border: solid 3px #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
   }       
 .hero-form h3 {
     margin: 0;
@@ -113,7 +134,13 @@ footer a {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
-  }  
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+  } 
+  .form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  } 
   .hero-form label {
     margin: 0 5px;
   }
@@ -123,7 +150,11 @@ footer a {
     border: none;
     padding: 10px 20px;
     font-size: 16px;  
+    border-radius: 10px;
 }  
+.hero-form button:hover {
+  background-color: #39a6b2;  
+}
 
 .intro p {
     line-height: 1.7;
@@ -158,11 +189,14 @@ footer a {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
+  }
+  .step:last-child {
+    border-bottom: none;   
   }
 
 .step h3 {
@@ -296,7 +330,15 @@ footer a {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
 }
+
+.contact-form input:focus, .contact-form textarea:focus   {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
+}
+
 .contact-form button  {
   width: 100%;
   border: none;
@@ -305,6 +347,11 @@ footer a {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
+}
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@@ -312,6 +359,7 @@ footer a {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
